Roll back to Java 11, Spring Boot 2.x parent, and javax validation
Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>